# BOT-shiny-app-testing

./: locust_fe_test.py  locustfile_ml_endpoint_direct.py  pyproject.toml
